# vs-view

./: .gitignore  .prettierignore  .prettierrc  README.md  TODO.md  prek.toml  pyproject.toml  zensical.toml
.github/: renovate.json
.github/scripts/: detect_plugin_releases.py  push_release_tags.py  resolve_package.py
.github/workflows/: cd-build-python.yml  cd-build-vspackrgb.yml  cd-build-vsview-cli.yml  cd-plugin-propose-releases.yml  cd-plugin-publish-release.yml  cd-publish-native.yml  check-plugin-releases.yml  ci-docs.yml  ci-lint.yml  ci-test.yml  ci-update-submodules.yml  docs.yml  lint.yml  publish-py-pkg.yml  pypipublish.yml  release-plugins.yml
docs/: contributing.md  index.md  installation.md
docs/api/: user.md
docs/api/developer/: hooks.md  index.md
docs/api/developer/tools/: frameprops.md  scening.md
docs/javascripts/: glightbox-init.js  glightbox.min.js
docs/overrides/python/material/: module.html.jinja
docs/plugins/: development.md  first-party.md  index.md  overview.md  second-party.md  third-party.md
docs/stylesheets/: extra.css
docs/usage/: color-management.md  configuration.md  index.md  overview.md  vscode.md
docs/usage/workspaces/: file.md  index.md  quick-script.md  script.md  workspace.md
scripts/: copy_svg.py  dump_pyqtdarktheme_qss.py  dump_qdarkstyle_qss.py  fix_vs_inv.py  frame_visualizer.py  hatch_build_empty_global_settings.py  hatch_hooks.py  standard_icon_browser.py
scripts/qt/: dump_qdarkstyle_qss.py  palette_visualizer.py
src/plugins/audio-convert/: README.md  pyproject.toml
src/plugins/audio-convert/src/vsview_audio_convert/: __init__.py
src/plugins/comp/: README.md  pyproject.toml
src/plugins/comp/src/vsview_comp/: __init__.py  _metadata.py  main.py  models.py  panels.py  plugin.py  tmdb_api_key.txt  tmdb_tooltip.html.jinja  ui.py  utils.py  worker.py
src/plugins/fftspectrum/: README.md  pyproject.toml
src/plugins/fftspectrum/src/vsview_fftspectrum/: __init__.py
src/plugins/frameprops-extended/: README.md  pyproject.toml
src/plugins/frameprops-extended/src/vsview_frameprops_extended/: __init__.py
src/plugins/histogram/: README.md  pyproject.toml
src/plugins/histogram/src/vsview_histogram/: __init__.py  plugin.py  settings.py  utils.py
src/plugins/histogram/src/vsview_histogram/cie/: __init__.py  ui.py
src/plugins/histogram/src/vsview_histogram/levels/: __init__.py  charts.py  ui.py
src/plugins/histogram/src/vsview_histogram/luma/: __init__.py  numba_backend.py  ui.py
src/plugins/histogram/src/vsview_histogram/vectorscope/: __init__.py  ui.py
src/plugins/histogram/src/vsview_histogram/waveform/: __init__.py  ui.py
src/plugins/slowpics/src/vsview_slowpics/: main.py  panels.py  settings.py  worker.py
src/plugins/split-planes/: README.md  pyproject.toml
src/plugins/split-planes/src/vsview_split_planes/: __init__.py
src/vspackrgb/: README.md  pyproject.toml
src/vspackrgb/benchmark/: script.py
src/vspackrgb/src/vspackrgb/: cython.pyi  cython.pyx  helpers.py  numba.py  numpy.py  python.py
src/vspackrgb/tests/: test_packrgb.py
src/vsview/: __init__.py  __main__.py  cli.py  env.py  logging.py  types.py
src/vsview-cli/: ARCHITECTURE.md  README.md  pyproject.toml
src/vsview-cli/python/vsview_cli/: __init__.py
src/vsview-cli/python/vsview_cli/_cli/: __init__.pyi
src/vsview-cli/rust/: Cargo.toml
src/vsview-cli/rust/src/: commands.rs  lib.rs
src/vsview-cli/rust/src/commands/: cli.rs  settings.rs
src/vsview-cli/tests/: test_cli.py
src/vsview/api/: __init__.py  _helpers.py  info.py  output.py
src/vsview/app/: error.py  icon.py  main.py  packing.py  utils.py
src/vsview/app/outputs/: __init__.py  audio.py  buffer.py  manager.py  packing.py  video.py
src/vsview/app/plugins/: __init__.py  _interface.py  api.py  contracts.py  interface.py  manager.py  specs.py
src/vsview/app/settings/: README.md  __init__.py  action.py  dialog.py  manager.py  metadata.py  models.py  secrets.py  shortcuts.py  widgets.py
src/vsview/app/tools/colorpicker/: plugin.py  utils.py
src/vsview/app/tools/cropping/: __init__.py  plugin.py  settings.py  utils.py
src/vsview/app/tools/frameprops/: __init__.py  api.py  formatters.py  plugin.py  specs.py
src/vsview/app/tools/frameprops/builtins/: video.py
src/vsview/app/tools/scening/: api.py  constants.py  models.py  parsers.py  plugin.py  serializer.py  specs.py  ui.py  utils.py
src/vsview/app/views/: __init__.py  components.py  hdr.py  hdr.qml  plugins.py  splitter.py  status.py  tab.py  timeline.py  video.py
src/vsview/app/workspace/: base.py  file.py  loader.py  playback.py  quick_script.py  tab_manager.py  utils.py
src/vsview/assets/: __init__.py  providers.py  utils.py
src/vsview/vsenv/: loop.py  policy.py
stubs/vapoursynth/: __init__.pyi
tests/: test_graphics_view_selection.py  test_scening_parsers.py  test_settings_proxy.py  test_workspace_blocker.py  test_workspace_utils.py
tests/fixtures/scening/: test_ass.ass  test_matroska_multi.xml  test_matroska_single.xml  test_ogm.txt  test_qpfile.txt  test_qpfile_with_header.txt  test_xvidlog.txt
