[build-system]
requires = [
    "hatchling",
    "hatch-cython",
    "cython>=3.0.0",
    "setuptools",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "vspackrgb"
dynamic = ["version"]
description = "RGB packing for VapourSynth frames"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vapoursynth"]

[project.optional-dependencies]
numpy = ["numpy>=2.0.0"]

[dependency-groups]
dev = ["cython>=3.0.0"]

# https://github.com/joshua-auchincloss/hatch-cython#readme
# https://setuptools.pypa.io/en/latest/deprecated/distutils/apiref.html#distutils.core.Extension

[tool.hatch.build.targets.wheel]
packages = ["src/vspackrgb"]
# Exclude .pyx source files from wheel
exclude = ["**/*.pyx"]

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

# Cython directives
directives = { boundscheck = false, wraparound = false, nonecheck = false, language_level = 3 }

# Platform-specific compilation arguments
compile_args = [ # nofmt
    { platforms = ["linux", "darwin"], arg = "-O3" },
    { platforms = ["windows"], arg = "/O2" },
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["vspackrgb/v*"]
default-tag = "vspackrgb/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "vspackrgb/v"

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# Test would require vapoursynth
test-skip = "*"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["native"]
