[build-system]
requires = [
    "hatchling",
    "hatch-cython",
    "cython>=3.0.0",
    "setuptools",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "vspackrgb"
dynamic = ["version"]
description = "RGB packing for VapourSynth frames"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "vapoursynth",
    "rgb",
    "packing",
    "cython",
    "arm",
    "arm64",
    "aarch64",
]
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Typing :: Typed",
]
dependencies = ["vapoursynth"]

[project.optional-dependencies]
numpy = ["numpy>=2.0.0"]

[project.urls]
"Documentation" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/vspackrgb"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/vspackrgb"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = ["cython>=3.0.0"]

# https://github.com/joshua-auchincloss/hatch-cython#readme
# https://setuptools.pypa.io/en/latest/deprecated/distutils/apiref.html#distutils.core.Extension

[tool.hatch.build.targets.wheel]
packages = ["src/vspackrgb"]
# Exclude .pyx source files from wheel
exclude = ["**/*.pyx"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "../../scripts/build/hatch_hooks.py"

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

# Cython directives
directives = { boundscheck = false, wraparound = false, nonecheck = false, language_level = 3, cdivision = true }

# Platform-specific compilation arguments
compile_args = [ # nofmt
    { platforms = ["linux", "darwin"], arg = "-O3" },
    { platforms = ["windows"], arg = "/O2" },
]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["vspackrgb/v*"]
exclude = ["*.post*"]
default-tag = "vspackrgb/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "vspackrgb/v"

[tool.cibuildwheel]
build-frontend = "uv"
build = "cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
# Test would require vapoursynth
test-skip = "*"
before-build = "git clean -fdx -e sboms.json src/vspackrgb"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["native"]
