[build-system]
requires = [
    "hatchling",
    "hatch-cython @ git+https://github.com/Varde-s-Forks/hatch-cython.git",
    "cython>=3.0.0",
    "setuptools",
    "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "vspackrgb"
dynamic = ["version"]
description = "RGB packing for VapourSynth frames"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "vapoursynth",
    "rgb",
    "packing",
    "cython",
    "arm",
    "arm64",
    "aarch64",
]
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Typing :: Typed",
]
dependencies = ["vapoursynth"]

[project.optional-dependencies]
numpy = ["numpy>=2.0.0"]

[project.urls]
"Documentation" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/vspackrgb"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/vspackrgb"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[dependency-groups]
dev = ["cython>=3.0.0"]

# https://github.com/joshua-auchincloss/hatch-cython#readme
# https://setuptools.pypa.io/en/latest/deprecated/distutils/apiref.html#distutils.core.Extension

[tool.hatch.build.targets.wheel]
packages = ["src/vspackrgb"]
# Exclude .pyx source files from wheel
exclude = ["**/*.pyx"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "../../scripts/build/hatch_hooks.py"

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
compile_py = false

# Cython directives
directives = { boundscheck = false, wraparound = false, nonecheck = false, language_level = 3, cdivision = true }

# Platform-specific compilation arguments
compile_args = [ # nofmt
    { platforms = ["linux", "darwin"], arg = "-O3" },
    { platforms = ["win32", "windows"], arg = "/O2" },
]

# Limited API / Stable ABI
py_limited_api = true
define_macros = [["CYTHON_LIMITED_API", "1"], ["Py_LIMITED_API", "0x030C0000"]]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["vspackrgb/v*"]
default-tag = "vspackrgb/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "vspackrgb/v"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.cibuildwheel]
build-frontend = { name = "build[uv]", args = ["--verbose"] }
build = "cp312-*"
skip = "*-win32 *-manylinux_i686"
# Test would require vapoursynth
test-skip = "*"
before-build = "git clean -fdx -e sboms.json src/vspackrgb"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
# Matches minimum supported by VapourSynth
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }

[tool.cibuildwheel.linux]
archs = ["native"]
# Matches minimum supported by VapourSynth
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"
