[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsview-audio-convert"
dynamic = ["version"]
description = "A vsview plugin for converting audio sample types and resampling audio clips."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview"]

[project.entry-points.vsview]
vsview_audio_convert = "vsview_audio_convert"

[project.urls]
"Documentation" = "https://jaded-encoding-thaumaturgy.github.io/vs-view/plugins/second-party/#audio-convert"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/plugins/audio-convert"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.uv.sources]
vsview = { workspace = true }

[tool.hatch.build.targets.wheel.hooks.custom]
path = "../../../scripts/build/hatch_hooks.py"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["audio-convert/v*"]
exclude = ["*.post*"]
default-tag = "audio-convert/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "audio-convert/v"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"
