[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsview-fftspectrum"
dynamic = ["version"]
description = "A vsview plugin displaying the Fast Fourier transform spectrum of a video clip"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview", "vsjetpack>=1.1.0"]

[project.entry-points.vsview]
vsview_fftspectrum = "vsview_fftspectrum"

[tool.uv.sources]
vsview = { workspace = true }
vsjetpack = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack", branch = "main" }

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["fftspectrum/v*"]
default-tag = "fftspectrum/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "fftspectrum/v"
