[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsview-split-planes"
version = "1.0.0"
description = "A vsview plugin displaying video clips' constituent planes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview", "vsjetpack>=1.1.0"]

[project.entry-points.vsview]
vsview_split_planes = "vsview_split_planes"

[tool.uv.sources]
vsview = { workspace = true }
vsjetpack = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack", branch = "main" }
