[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "vsview-split-planes"
dynamic = ["version"]
description = "A vsview plugin displaying video clips' constituent planes"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview", "vsjetpack>=1.1.0"]

[project.entry-points.vsview]
vsview_split_planes = "vsview_split_planes"

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/plugins/split-planes"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.uv.sources]
vsview = { workspace = true }

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["split-planes/v*"]
default-tag = "split-planes/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "split-planes/v"
