[build-system]
requires = ["hatchling", "versioningit", "hatch-sbom>=0.2.0"]
build-backend = "hatchling.build"

[project]
name = "vsview-split-planes"
dynamic = ["version"]
description = "A vsview plugin displaying video clips' constituent planes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [
    { name = "Vardë", email = "ichunjo.le.terrible@gmail.com" },
    { name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = ["vsview", "vsjetpack>=1.1.0"]

[project.entry-points.vsview]
vsview_split_planes = "vsview_split_planes"

[project.urls]
"Documentation" = "https://jaded-encoding-thaumaturgy.github.io/vs-view/plugins/second-party/#split-planes"
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/tree/main/src/plugins/split-planes"
"Bug Tracker" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-view/issues"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[tool.hatch.build.targets.wheel.hooks.sbom]
source = "uv"

[tool.hatch.build.targets.wheel.hooks.sbom.uv]
no-dev = true

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
match = ["split-planes/v*"]
default-tag = "split-planes/v0.0.0"

[tool.versioningit.tag2version]
rmprefix = "split-planes/v"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.uv.sources]
vsview = { workspace = true }
